# social_gathering

./: .gitignore  README.md  app.py  data.py  pyproject.toml  social_gathering.py
data/input/: employee_data_7_100_0.4_1.csv  employee_data_7_100_0.4_2.csv  employee_data_7_100_0.4_3.csv  sample_input.csv
data/output/: output_employee100_team7.csv
