[tool.poetry]
name = "social_gathering"
version = "0.1.0"
description = ""
authors = ["nukipei"]
readme = "README.md"
packages = [{include = "social_gathering"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyter = "^1.0.0"
numpy = "^1.24.3"
pulp = "^2.7.0"
streamlit = "^1.29.0"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.10.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
